# taitian-web

./: .gitignore  README.md  start-backend.sh  start-frontend.sh  快速启动指南.md  部署说明.md
backend/: .env.example  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/v1/: __init__.py  auth.py  media.py  news.py  router.py
backend/app/core/: config.py  database.py  security.py
backend/app/models/: __init__.py  media.py  news.py  user.py
backend/app/schemas/: __init__.py  media.py  news.py  user.py
backend/uploads/: .gitkeep
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  main.js
frontend/src/assets/styles/: main.scss
frontend/src/components/: ContactPopup.vue  LanguageSwitcher.vue
frontend/src/composables/: useLocale.js
frontend/src/i18n/: index.js
frontend/src/i18n/locales/: en.js  zh.js
frontend/src/layouts/: AdminLayout.vue  MainLayout.vue
frontend/src/router/: index.js
frontend/src/stores/: auth.js
frontend/src/utils/: axios.js
frontend/src/views/: About.vue  Applications.vue  Contact.vue  Home.vue  Login.vue  News.vue  NewsDetail.vue  Products.vue  Services.vue
frontend/src/views/admin/: Dashboard.vue  MediaManagement.vue  NewsManagement.vue
